Change scenario to real estate
